# ml-prj-2025-6_uY3

1/: GoldbergArtemiy_NLP_AI.ipynb  app.py
13/.virtual_documents/notebook_model_test/: test_load_model.ipynb
13/app/: deploy.ps1  requirements.txt
13/app/ML/: DataLoadFromDB.py  Logger.py  PINN.py  main.py  model_predict.py  model_train.py  prediction_manager.py  queries.py  requirements.txt  visualization.py
13/app/ML_model/: Logger.py  main.py  queries.py  visualization.py
13/app/WEB/: requirements.txt
13/app/WEB/DataManage/: Client_ClickHouse.py  DataLoadMain.py  Minio_Client.py  data_prep.py  queries.py  test1.csv
13/app/WEB/web_app/: last_uploaded_test.csv  main.py
13/app/dockerfiles/ml/: Dockerfile
13/app/dockerfiles/web/: Dockerfile
13/app/k8s/: namespace.yaml
13/app/k8s/clickhouse/: deployment.yaml  init-script.yaml  pvc.yaml  service.yaml
13/app/k8s/configs/: ml-configmap.yaml  secrets.yaml  (+1 more)
13/notebook_model_test/: Untitled.ipynb  itog.ipynb  pinn_model.h5  pinn_model.keras  pinn_model1.keras  pinn_model111.keras  pinn_model2.keras  pinn_model3.keras  pinn_model_without_norm.keras  pinn_model_without_norm1111 copy.keras  pinn_model_without_norm1111.keras  pinn_model_without_norm_jup.keras  test.ipynb  test_load_model.ipynb
13/notebook_model_test/.ipynb_checkpoints/: Data_and_Model_View_notebook-checkpoint.ipynb  Untitled-checkpoint.ipynb  test_load_model-checkpoint.ipynb
13/notebook_model_test/py_files/: data_prep.py  main.py
20/: model.ipynb
20/gui/: pyproject.toml
20/gui/src/: file_dialog.py  main.py  nn_model.py  ui.py
(+23 files in other folders)
